{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 949,
  "lineage": "898890cf-6fb7-9583-e8be-25ba26ac9234",
  "resources": [
    {
      "module": "module.Bastion-Jump-Host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:505724956953:instance/i-0be7edd6276782193",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be7edd6276782193",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GXI-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-006fa41a7028e6de8",
            "private_dns": "ip-10-0-0-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.191",
            "public_dns": "ec2-23-22-133-173.compute-1.amazonaws.com",
            "public_ip": "23.22.133.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0601f2c70c376b3ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ccd3624e9fdedeff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f479f38f463f85f",
            "tags": {
              "Name": "Bastion-jump-host-az1"
            },
            "tags_all": {
              "Name": "Bastion-jump-host-az1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ccd3624e9fdedeff"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.security_groups.aws_security_group.bastion_host_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion-Jump-Host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:505724956953:instance/i-04517a917bde7d119",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04517a917bde7d119",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GXI-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0903bdb9650070769",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-54-147-110-184.compute-1.amazonaws.com",
            "public_ip": "54.147.110.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053f687e773ced015",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ccd3624e9fdedeff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083427f02aa8a49c7",
            "tags": {
              "Name": "Bastion-jump-host-az2"
            },
            "tags_all": {
              "Name": "Bastion-jump-host-az2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ccd3624e9fdedeff"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.security_groups.aws_security_group.bastion_host_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.Bastion-Jump-Host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:505724956953:instance/i-0ba9dfe104951aaf0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba9dfe104951aaf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GXI-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091f69973244ed07f",
            "private_dns": "ip-10-0-2-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.106",
            "public_dns": "ec2-52-90-86-216.compute-1.amazonaws.com",
            "public_ip": "52.90.86.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8f677ef646d7828",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ccd3624e9fdedeff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040702419b6f41a03",
            "tags": {
              "Name": "Bastion-jump-host-az3"
            },
            "tags_all": {
              "Name": "Bastion-jump-host-az3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ccd3624e9fdedeff"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.security_groups.aws_security_group.bastion_host_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:505724956953:instance/i-0f41cb5cad8a76e27",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f41cb5cad8a76e27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GXI-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da8ae3c03968229b",
            "private_dns": "ip-10-0-3-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f0e21b60f6530a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-071cc64a224127700"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c8c140072ef3499",
            "tags": {
              "Name": "web-server-az1"
            },
            "tags_all": {
              "Name": "web-server-az1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071cc64a224127700"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.private_app_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.security_groups.aws_security_group.alb_security_group",
            "module.security_groups.aws_security_group.private_subnet_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:505724956953:instance/i-02acbe8f84246c7ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02acbe8f84246c7ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GXI-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06a3bf3c65354e785",
            "private_dns": "ip-10-0-4-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abe4686cffa9c552",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-071cc64a224127700"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae7885f2727831d4",
            "tags": {
              "Name": "web-server-az2"
            },
            "tags_all": {
              "Name": "web-server-az2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071cc64a224127700"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.private_app_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.security_groups.aws_security_group.alb_security_group",
            "module.security_groups.aws_security_group.private_subnet_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:505724956953:instance/i-09941e98fea451e2c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09941e98fea451e2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GXI-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03990ddaa1ae486d6",
            "private_dns": "ip-10-0-5-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025cfd3c3f1ed3a0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-071cc64a224127700"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c650ce978d128a8",
            "tags": {
              "Name": "web-server-az3"
            },
            "tags_all": {
              "Name": "web-server-az3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071cc64a224127700"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.private_app_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.security_groups.aws_security_group.alb_security_group",
            "module.security_groups.aws_security_group.private_subnet_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:internet-gateway/igw-07faef103b878eb33",
            "id": "igw-07faef103b878eb33",
            "owner_id": "505724956953",
            "tags": {
              "Name": "GXI-igw"
            },
            "tags_all": {
              "Name": "GXI-igw"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:route-table/rtb-0c4701801a0a2bb4d",
            "id": "rtb-0c4701801a0a2bb4d",
            "owner_id": "505724956953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07faef103b878eb33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_vpc.gxi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0727800310dd74f7a",
            "route_table_id": "rtb-0c4701801a0a2bb4d",
            "subnet_id": "subnet-00f479f38f463f85f"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfc41cba9933e639",
            "route_table_id": "rtb-0c4701801a0a2bb4d",
            "subnet_id": "subnet-083427f02aa8a49c7"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az3_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87e7a60a276e583",
            "route_table_id": "rtb-0c4701801a0a2bb4d",
            "subnet_id": "subnet-040702419b6f41a03"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-02c8c140072ef3499",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c8c140072ef3499",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az1"
            },
            "tags_all": {
              "Name": "private_app_subnet_az1"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-0ae7885f2727831d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7885f2727831d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az2"
            },
            "tags_all": {
              "Name": "private_app_subnet_az2"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-06c650ce978d128a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c650ce978d128a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az3"
            },
            "tags_all": {
              "Name": "private_app_subnet_az3"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-020744fb426adf101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020744fb426adf101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_data_subnet_az1"
            },
            "tags_all": {
              "Name": "private_data_subnet_az1"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-0515631bc7631c5a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0515631bc7631c5a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_data_subnet_az2"
            },
            "tags_all": {
              "Name": "private_data_subnet_az2"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-09db0746feedd63bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09db0746feedd63bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_data_subnet_az3"
            },
            "tags_all": {
              "Name": "private_data_subnet_az3"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-00f479f38f463f85f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f479f38f463f85f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az1"
            },
            "tags_all": {
              "Name": "public_subnet_az1"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-083427f02aa8a49c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083427f02aa8a49c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az2"
            },
            "tags_all": {
              "Name": "public_subnet_az2"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:subnet/subnet-040702419b6f41a03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040702419b6f41a03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505724956953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az3"
            },
            "tags_all": {
              "Name": "public_subnet_az3"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gxi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:vpc/vpc-0cdffd6a2ae4573b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-00d52434fb7160969",
            "default_route_table_id": "rtb-0024daa6db7372fb6",
            "default_security_group_id": "sg-0f66cf37dd484ab69",
            "dhcp_options_id": "dopt-042821668b69e178b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdffd6a2ae4573b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0024daa6db7372fb6",
            "owner_id": "505724956953",
            "tags": {
              "Name": "GXI-vpc"
            },
            "tags_all": {
              "Name": "GXI-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:loadbalancer/app/GXI-ALB/f0ea8e86202973e9",
            "arn_suffix": "app/GXI-ALB/f0ea8e86202973e9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "GXI-ALB-583573798.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:505724956953:loadbalancer/app/GXI-ALB/f0ea8e86202973e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "GXI-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfdc64759ca3fde5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f479f38f463f85f"
              },
              {
                "subnet_id": "subnet-040702419b6f41a03"
              },
              {
                "subnet_id": "subnet-083427f02aa8a49c7"
              }
            ],
            "subnets": [
              "subnet-00f479f38f463f85f",
              "subnet-040702419b6f41a03",
              "subnet-083427f02aa8a49c7"
            ],
            "tags": {
              "Name": "GXI-ALB"
            },
            "tags_all": {
              "Name": "GXI-ALB"
            },
            "vpc_id": "vpc-0cdffd6a2ae4573b1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.security_groups.aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:listener/app/GXI-ALB/f0ea8e86202973e9/6bb36e3293d1f507",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505724956953:listener/app/GXI-ALB/f0ea8e86202973e9/6bb36e3293d1f507",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:loadbalancer/app/GXI-ALB/f0ea8e86202973e9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.application_load_balancer.aws_lb.application_load_balancer",
            "module.application_load_balancer.aws_lb_target_group.alb_target_group",
            "module.security_groups.aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6",
            "arn_suffix": "targetgroup/GXI-TG/e5323010cbff13e6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "GXI-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6-2023022106414227340000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6",
            "target_id": "i-0f41cb5cad8a76e27"
          },
          "dependencies": [
            "module.EC2.aws_instance.instance_az1",
            "module.VPC.aws_subnet.private_app_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.application_load_balancer.aws_lb_target_group.alb_target_group",
            "module.security_groups.aws_security_group.alb_security_group",
            "module.security_groups.aws_security_group.private_subnet_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6-2023022106414255970000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6",
            "target_id": "i-02acbe8f84246c7ea"
          },
          "dependencies": [
            "module.EC2.aws_instance.instance_az2",
            "module.VPC.aws_subnet.private_app_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.application_load_balancer.aws_lb_target_group.alb_target_group",
            "module.security_groups.aws_security_group.alb_security_group",
            "module.security_groups.aws_security_group.private_subnet_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6-2023022106414173350000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505724956953:targetgroup/GXI-TG/e5323010cbff13e6",
            "target_id": "i-09941e98fea451e2c"
          },
          "dependencies": [
            "module.EC2.aws_instance.instance_az3",
            "module.VPC.aws_subnet.private_app_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.application_load_balancer.aws_lb_target_group.alb_target_group",
            "module.security_groups.aws_security_group.alb_security_group",
            "module.security_groups.aws_security_group.private_subnet_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047c1dd7110c63dab",
            "domain": "vpc",
            "id": "eipalloc-047c1dd7110c63dab",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-78-105.compute-1.amazonaws.com",
            "public_ip": "3.224.78.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az1 eip"
            },
            "tags_all": {
              "Name": "nat gateway az1 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029d45b734ecf8b71",
            "domain": "vpc",
            "id": "eipalloc-029d45b734ecf8b71",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-42-87.compute-1.amazonaws.com",
            "public_ip": "3.218.42.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az2 eip"
            },
            "tags_all": {
              "Name": "nat gateway az2 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ccc253b43eeb8c2",
            "domain": "vpc",
            "id": "eipalloc-03ccc253b43eeb8c2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-205-149-59.compute-1.amazonaws.com",
            "public_ip": "44.205.149.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az3 eip"
            },
            "tags_all": {
              "Name": "nat gateway az3 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047c1dd7110c63dab",
            "connectivity_type": "public",
            "id": "nat-0c8b0eed0b430a532",
            "network_interface_id": "eni-0922901cb5037b883",
            "private_ip": "10.0.0.85",
            "public_ip": "3.224.78.105",
            "subnet_id": "subnet-00f479f38f463f85f",
            "tags": {
              "Name": "nat gateway az1"
            },
            "tags_all": {
              "Name": "nat gateway az1"
            }
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az1"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029d45b734ecf8b71",
            "connectivity_type": "public",
            "id": "nat-0a256aed38ac0c54e",
            "network_interface_id": "eni-027c352bd7f3f31da",
            "private_ip": "10.0.1.189",
            "public_ip": "3.218.42.87",
            "subnet_id": "subnet-083427f02aa8a49c7",
            "tags": {
              "Name": "nat gateway az2"
            },
            "tags_all": {
              "Name": "nat gateway az2"
            }
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az2"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ccc253b43eeb8c2",
            "connectivity_type": "public",
            "id": "nat-0a2f56c8e5046434c",
            "network_interface_id": "eni-0a42e457b5060f9c6",
            "private_ip": "10.0.2.35",
            "public_ip": "44.205.149.59",
            "subnet_id": "subnet-040702419b6f41a03",
            "tags": {
              "Name": "nat gateway az3"
            },
            "tags_all": {
              "Name": "nat gateway az3"
            }
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az3"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:route-table/rtb-0c265ac46a28e3819",
            "id": "rtb-0c265ac46a28e3819",
            "owner_id": "505724956953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8b0eed0b430a532",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az1"
            },
            "tags_all": {
              "Name": "private route table az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az1",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az1"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:route-table/rtb-04bedfb8f467ff251",
            "id": "rtb-04bedfb8f467ff251",
            "owner_id": "505724956953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a256aed38ac0c54e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az2"
            },
            "tags_all": {
              "Name": "private route table az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az2",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az2"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:route-table/rtb-0537a55a11e40756c",
            "id": "rtb-0537a55a11e40756c",
            "owner_id": "505724956953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2f56c8e5046434c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az3"
            },
            "tags_all": {
              "Name": "private route table az3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az3",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az3"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az1_route_table_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ab4123a3375a3a9",
            "route_table_id": "rtb-0c265ac46a28e3819",
            "subnet_id": "subnet-02c8c140072ef3499"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.private_app_subnet_az1",
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az1",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az1",
            "module.nat_gateway.aws_route_table.private_route_table_az1"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az2_route_table_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f773ef8de7d22b4",
            "route_table_id": "rtb-04bedfb8f467ff251",
            "subnet_id": "subnet-0ae7885f2727831d4"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.private_app_subnet_az2",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az2",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az2",
            "module.nat_gateway.aws_route_table.private_route_table_az2"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az3_route_table_az3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0979b329e5f8ad6dc",
            "route_table_id": "rtb-0537a55a11e40756c",
            "subnet_id": "subnet-06c650ce978d128a8"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.private_app_subnet_az3",
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az3",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az3",
            "module.nat_gateway.aws_route_table.private_route_table_az3"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az1_route_table_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2029bb9d2342e5b",
            "route_table_id": "rtb-0c265ac46a28e3819",
            "subnet_id": "subnet-020744fb426adf101"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.private_data_subnet_az1",
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az1",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az1",
            "module.nat_gateway.aws_route_table.private_route_table_az1"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az2_route_table_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0f48ad29ae09292",
            "route_table_id": "rtb-04bedfb8f467ff251",
            "subnet_id": "subnet-0515631bc7631c5a1"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.private_data_subnet_az2",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az2",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az2",
            "module.nat_gateway.aws_route_table.private_route_table_az2"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az3_route_table_az3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2e8cbd950addc91",
            "route_table_id": "rtb-0537a55a11e40756c",
            "subnet_id": "subnet-09db0746feedd63bf"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.private_data_subnet_az3",
            "module.VPC.aws_subnet.public_subnet_az3",
            "module.VPC.aws_vpc.gxi_vpc",
            "module.VPC.data.aws_availability_zones.available_zones",
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_az3",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_az3",
            "module.nat_gateway.aws_route_table.private_route_table_az3"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:security-group/sg-0dfdc64759ca3fde5",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfdc64759ca3fde5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb security group",
            "name_prefix": "",
            "owner_id": "505724956953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb security group"
            },
            "tags_all": {
              "Name": "alb security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:security-group/sg-0ccd3624e9fdedeff",
            "description": "Enable ssh for bastian host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccd3624e9fdedeff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion host security group",
            "name_prefix": "",
            "owner_id": "505724956953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion host security group"
            },
            "tags_all": {
              "Name": "Bastion host security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505724956953:security-group/sg-071cc64a224127700",
            "description": "enable http/https access on port 80/443 via alb sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071cc64a224127700",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfdc64759ca3fde5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfdc64759ca3fde5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private subnet security group",
            "name_prefix": "",
            "owner_id": "505724956953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private subnet security group"
            },
            "tags_all": {
              "Name": "private subnet security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdffd6a2ae4573b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.gxi_vpc",
            "module.security_groups.aws_security_group.alb_security_group"
          ]
        }
      ]
    }
  ]
}